# GhidraMCP

./: bridge_mcp_ghidra.py  pyproject.toml
